--- a/index.html
+++ b/index.html
@@ -21,15 +21,24 @@
 
         var dataset = [ 5, 10, 13, 19, 21, 25, 22, 18, 15, 13, 11, 12, 15, 20, 18, 17, 16, 18, 23, 25 ];
 
-        d3.select("body").selectAll("div")
-          .data(dataset)
-          .enter()
-          .append("div")
-          .attr("class", "bar")
-          .style("height", function(d) {
-            var barHeight = d * 5;
-            return barHeight + "px";
-          });
+        //Width and height
+        var svgWidth = 500;
+        var svgHeight = 100;
+
+        //Create SVG element
+        var svg = d3.select("body")
+                    .append("svg")
+                    .attr("width", svgWidth)
+                    .attr("height", svgHeight);
+
+        svg.selectAll("rect")
+            .data(dataset)
+            .enter()
+            .append("rect")
+            .attr("x", 0)
+            .attr("y", 0)
+            .attr("width", 20)
+            .attr("height", 100);
 
       </script>
     </body>
