--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             .data(dataset)
             .enter()
             .append("rect")
-            .attr("x", 0)
+            .attr("x", function(d, i) {
+              return i * (svgWidth / dataset.length);
+            })
             .attr("y", 0)
             .attr("width", 20)
             .attr("height", 100);
