--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         //Width and height
         var svgWidth = 500;
         var svgHeight = 100;
+        var barPadding = 1;
 
         //Create SVG element
         var svg = d3.select("body")
@@ -38,9 +39,34 @@
             .attr("x", function(d, i) {
               return i * (svgWidth / dataset.length);
             })
-            .attr("y", 0)
-            .attr("width", 20)
-            .attr("height", 100);
+            .attr("y", function(d){
+              return svgHeight - (d * 4); //Height minus data value
+            })
+            .attr("width", svgWidth / dataset.length - barPadding)
+            .attr("height", function(d){
+              return d * 4; //Just the data value
+            })
+            .attr("fill", function(d){
+              return "rgb(0,0, " + (d * 10) + ")";
+            });
+
+        svg.selectAll("text")
+            .data(dataset)
+            .enter()
+            .append("text")
+            .text(function(d){
+              return d;
+            })
+            .attr("x", function(d,i){
+              return i * (svgWidth / dataset.length) + (svgWidth / dataset.length - barPadding) / 2;
+            })
+            .attr("y", function(d){
+              return svgHeight - (d * 4) + 14;
+            })
+            .attr("font-family", "sans-serif")
+            .attr("font-size", "11px")
+            .attr("fill", "white")
+            .attr("text-anchor", "middle");
 
       </script>
     </body>
